fix: fixed issue where in small screens the skills section would overflow horizontally

--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -29,17 +29,21 @@
         background-color: white;
         border: 1px solid $normal-grey;
         border-radius: 16px;
-        padding: item(6);
+        padding: item(2);
+
+        @include sm {
+          padding: item(6);
+        }
 
         h2 {
           margin-bottom: item(2);
-          font-size: 3.2rem;
+          font-size: 2.8rem;
           font-weight: 600;
           text-align: center;
           letter-spacing: -0.1rem;
 
-          @media screen and (max-width: 480px) {
-            font-size: 2.8rem;
+          @include sm {
+            font-size: 3.2rem;
           }
         }
 
@@ -47,6 +51,7 @@
           font-size: 1.4rem;
           font-weight: 500;
           color: gray;
+          text-align: center;
         }
       }
 
@@ -66,6 +71,7 @@
         p {
           font-size: 2rem;
           line-height: 1.4;
+          text-align: left
         }
       }
 
@@ -111,12 +117,10 @@
       }
 
       @media screen and (max-width: 600) {
-        article.card {
-          padding: item(4);
-        }
 
-        article.githubCard > a {
-          padding: item(4);
+        article.githubCard a {
+          padding: item(2);
+          color: red;
         }
       }
     }
